fixed alignment of the menu button

--- a/src/components/menu/Menu.css
+++ b/src/components/menu/Menu.css
@@ -1,10 +1,10 @@
 .menu {
   position: fixed;
-  top: -33px;
+  top: -30px;
   left: 20px;
   z-index: 999;
-  width: 52px;
-  height: 52px;
+  width: 49px;
+  height: 49px;
   background-color: rgba(255, 255, 255, 0.2);
   backdrop-filter: blur(5px);
   border-radius: 20%;
